--- a/css/styles.css
+++ b/css/styles.css
@@ -3,5 +3,41 @@
 }
 #checkout{
   display:none;
-  float: right;
 }
+h1{
+  text-align: center;
+  font-family:'K2D', sans-serif;
+  font-weight: bolder;
+  font-size: 100px;
+  background-color: white;
+  opacity: 0.8;
+  padding-bottom: 30px;
+}
+body {
+  background-image: url("../img/bg1.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+}
+.container{
+  border: 3px solid red;
+  float: left;
+  /*border-radius: 15px;*/
+  width: 40%;
+  background-color: white;
+  opacity: 0.5;
+  margin-right: 0.5px;
+  font-size: 30px;
+  padding-right: 40px;
+}
+#cob{
+  border: 3px solid red;
+  border-radius: 15px;
+  width: 30%;
+  background-color: white;
+  opacity: 0.5;
+  margin-left: 1200px;
+  font-size: 30px;
+  margin-right: 40px;
+  padding-left: 20px;
+}
+
